crates/foldback-sys/include/foldback.h

Auto-generated by cbindgen from foldback-sys. Do not edit by hand.

#ifndef FOLDBACK_H
#define FOLDBACK_H

/* Warning, this file is autogenerated by cbindgen. Don't modify this manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Status codes returned by every fallible `foldback_*` call.
 */
enum FoldbackStatus
#if __STDC_VERSION__ >= 202311L
  : int32_t
#endif // __STDC_VERSION__ >= 202311L
 {
    Ok = 0,
    NullPointer = -1,
    InvalidUtf8 = -2,
    Io = -3,
    Panic = -4,
};
#if __STDC_VERSION__ >= 202311L
typedef enum FoldbackStatus FoldbackStatus;
#else
typedef int32_t FoldbackStatus;
#endif // __STDC_VERSION__ >= 202311L

/**
 * Opaque handle — the C side never sees `Session`'s real layout, only
 * this pointer, so `Session`'s internal fields can change freely
 * without an ABI break.
 */
typedef struct FoldbackHandle FoldbackHandle;

/**
 * Configuration for [`foldback_session_create`], matching
 * [`foldback_core::session::SessionBuilder`]'s own fields exactly (one
 * struct in, no separate setter calls needed across the FFI boundary).
 */
typedef struct FoldbackConfig {
    uint32_t tick_rate_hz;
    uint32_t peer_count;
    uint16_t local_peer_id;
    /**
     * Ticks of ring-buffer retention. 0 means "use the library default"
     * (600 — see `SessionBuilder::default`), since 0 itself is never a
     * usable retention window.
     */
    uint32_t retention;
    uint8_t build_id[16];
    /**
     * Nullable, NUL-terminated UTF-8 path. Null means "don't record to
     * a file" — matching `SessionBuilder::record_to` being optional.
     */
    const char *record_to_path;
} FoldbackConfig;

typedef struct FoldbackPendingHash {
    uint64_t tick;
    uint64_t hash;
} FoldbackPendingHash;

/**
 * Creates a new session. Returns null on failure — check
 * [`foldback_last_error`] for why (a bad `record_to_path`, an I/O
 * error opening it, or invalid UTF-8 in the path).
 *
 * # Safety
 * `config` must be a valid, non-null pointer to a fully-initialized
 * `Config`. `config->record_to_path`, if non-null, must be a
 * valid NUL-terminated C string.
 */
struct FoldbackHandle *foldback_session_create(const struct FoldbackConfig *config);

/**
 * Destroys a session created by [`foldback_session_create`]. A no-op
 * (not an error) if `session` is null.
 *
 * # Safety
 * `session` must either be null or a pointer previously returned by
 * [`foldback_session_create`] and not already destroyed.
 */
void foldback_session_destroy(struct FoldbackHandle *session);

/**
 * Hashes `state` and records it as this session's own report for
 * `tick` (cookbook recipe 1/8's `HashTick`).
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 * `state` must point to at least `len` readable bytes (or be null iff
 * `len` is 0).
 */
FoldbackStatus foldback_hash_tick(struct FoldbackHandle *session,
                                  uint64_t tick,
                                  const uint8_t *state,
                                  uintptr_t len);

/**
 * Records a hash reported by any peer (including this session's own,
 * via [`foldback_hash_tick`]) into the cross-peer comparison table.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
FoldbackStatus foldback_record_peer_hash(struct FoldbackHandle *session,
                                         uint64_t tick,
                                         uint16_t peer_id,
                                         uint64_t hash);

/**
 * Level 2: hashes one entity's state and records it as this session's
 * own report for `tick` (cookbook recipe 4). Recording-only — like
 * `foldback_core::Session::hash_entity` itself, this is a no-op beyond
 * the hash call unless the session was created with `record_to_path`
 * set; there's no in-memory Level 2 divergence tracking yet (matches
 * `Session::hash_entity`'s own documented scope).
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 * `state` must point to at least `len` readable bytes (or be null iff
 * `len` is 0).
 */
FoldbackStatus foldback_hash_entity(struct FoldbackHandle *session,
                                    uint64_t tick,
                                    uint64_t entity_id,
                                    const uint8_t *state,
                                    uintptr_t len);

/**
 * Records an entity hash reported by any peer (including this
 * session's own, via [`foldback_hash_entity`]) — the
 * `foldback_record_peer_hash` counterpart for Level 2.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
FoldbackStatus foldback_record_peer_entity_hash(struct FoldbackHandle *session,
                                                uint64_t tick,
                                                uint16_t peer_id,
                                                uint64_t entity_id,
                                                uint64_t hash);

/**
 * Level 3: hashes one field's value and records it as this session's
 * own report for `tick`, keeping the raw `value` bytes too (cookbook
 * recipe 5) — this is what lets the UI show "3.14159 vs 3.14158"
 * instead of just two unequal hashes. Recording-only, same caveat as
 * [`foldback_hash_entity`].
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 * `field_name` must be a valid NUL-terminated UTF-8 C string. `value`
 * must point to at least `value_len` readable bytes (or be null iff
 * `value_len` is 0).
 */
FoldbackStatus foldback_hash_field(struct FoldbackHandle *session,
                                   uint64_t tick,
                                   uint64_t entity_id,
                                   const char *field_name,
                                   const uint8_t *value,
                                   uintptr_t value_len);

/**
 * Records a field hash reported by any peer — the
 * `foldback_record_peer_hash` counterpart for Level 3.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 * `field_name` must be a valid NUL-terminated UTF-8 C string. `value`
 * must point to at least `value_len` readable bytes (or be null iff
 * `value_len` is 0).
 */
FoldbackStatus foldback_record_peer_field_hash(struct FoldbackHandle *session,
                                               uint64_t tick,
                                               uint16_t peer_id,
                                               uint64_t entity_id,
                                               const char *field_name,
                                               uint64_t hash,
                                               const uint8_t *value,
                                               uintptr_t value_len);

/**
 * The number of hashes currently pending (produced locally since the
 * last [`foldback_take_pending_hashes`] call), without draining them —
 * lets a caller size its send buffer before draining.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
uintptr_t foldback_pending_hash_count(const struct FoldbackHandle *session);

/**
 * Drains up to `out_capacity` pending hashes into `out`, oldest first,
 * removing exactly the ones written — a partial drain (more pending
 * than `out_capacity`) leaves the remainder for the next call, matching
 * how a game's own netcode may cap how much it sends per packet.
 * Returns the number of entries actually written.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 * `out` must point to at least `out_capacity` writable
 * `PendingHash` slots (or be null iff `out_capacity` is 0).
 */
uintptr_t foldback_take_pending_hashes(struct FoldbackHandle *session,
                                       struct FoldbackPendingHash *out,
                                       uintptr_t out_capacity);

/**
 * Checks for a new cross-peer divergence (cookbook recipe 1). Returns
 * `Status::Ok` with `*out_tick` set if one was found, or a
 * distinguishable "not found" via the separate `out_found` flag — kept
 * as two out-params rather than overloading the status code, since
 * "no divergence yet" is a normal outcome, not an error.
 *
 * # Safety
 * `session`, `out_found`, and `out_tick` must be valid, non-null
 * pointers (`out_tick` need not be initialized).
 */
FoldbackStatus foldback_check_divergence(struct FoldbackHandle *session,
                                         bool *out_found,
                                         uint64_t *out_tick);

/**
 * The combined hash over every tick this session has locally hashed
 * (cookbook's CI-gate pattern). Infallible given a valid session.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
uint64_t foldback_finish(const struct FoldbackHandle *session);

/**
 * Writes the closing frame if recording to a file — call before
 * [`foldback_session_destroy`] when `record_to_path` was set, so a
 * reader can tell a clean recording from a truncated one.
 *
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
FoldbackStatus foldback_finish_recording(struct FoldbackHandle *session);

/**
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
uint32_t foldback_tick_rate_hz(const struct FoldbackHandle *session);

/**
 * # Safety
 * `session` must be a valid pointer from [`foldback_session_create`].
 */
uint32_t foldback_peer_count(const struct FoldbackHandle *session);

/**
 * Writes the calling thread's most recent error message, NUL-terminated,
 * into `buf` (truncated to fit if necessary). Returns the full message's
 * length in bytes, not counting the NUL terminator — 0 if there is no
 * pending error. A successful call to any other `foldback_*` function
 * clears the error.
 *
 * # Safety
 * `buf` must point to at least `buf_len` writable bytes, or be null iff
 * `buf_len` is 0.
 */
uintptr_t foldback_last_error(char *buf, uintptr_t buf_len);

#endif  /* FOLDBACK_H */